# airisk-2030

./: LICENSE  LICENSE-DATA  README.md  pyproject.toml
airisk/: __init__.py  scenarios.py  simulation.py
airisk/evaluation/: __init__.py  calibration.py  leaderboard.py  scoring.py
airisk/models/: __init__.py  capability.py  compute.py  economic.py  geopolitical.py  risk.py
data/: MANIFEST.json  ground_truth_public.json
data/capability/: benchmark_scores.csv  breakthrough_events.csv  metr_task_horizons.csv  model_metadata.csv
data/compute/: chip_capacity.csv  compute_trends.csv  energy_demand.csv  rare_earth_production.csv
data/economic/: productivity_multiplier.csv  sectoral_automation.csv  unemployment.csv
data/geopolitical/: country_attributes.csv  country_capabilities.csv  transfer_matrix.csv
data/incidents/: annual_counts.csv  incident_log.csv
data/policy/: policy_events.csv
docs/: BASELINE.md  DATASETS.md  EVALUATION.md  SUBMISSION_FORMAT.md
examples/baseline_submission/: README.md  submission.json
tests/: test_baseline.py
